--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
             <ul>
                 <li><a href="recipes/steakmeal.html"> Pan Seared Steak and Meal Prep </a></li>
-                <li></li>
-
+                <li><a href="recipes/chickenwings.html"> Crispy Honey Sriracha Chicken Wings</li>
+                <li><a href="recipes/clam.html">Clams with sherry & Serrano Ham</a></li>
             </ul>
                 
 
