Fixed capitalization on Clam title

--- a/recipes/clam.html
+++ b/recipes/clam.html
@@ -2,7 +2,7 @@
     <html lang="en">
         <head>
             <meta charset="UTF-8">
-            <title> Recipe | Clams with sherry & Serrano ham</title>
+            <title> Recipe | Clams with Sherry & Serrano Ham</title>
         </head>
 
         <body>
