--- a/recipes/clam.html
+++ b/recipes/clam.html
@@ -6,7 +6,7 @@
         </head>
 
         <body>
-            <h1><strong>Clams with sherry & Serrano ham</strong></h1>
+            <h1><strong>Clams with Sherry & Serrano Ham</strong></h1>
             <p>Sweet clams and salty ham are a perfect combination, and this tapas dish or sharing starter can be made in minutes</p>
 
             <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/clams-with-sherry-serrano-ham-93de2aa.jpg?quality=90&webp=true&resize=600,545">
