--- a/recipes/steakmeal.html
+++ b/recipes/steakmeal.html
@@ -2,7 +2,7 @@
     <html lang="en">
         <head>
             <meta charset="UTF-8">
-            <title>  Recipe </title>
+            <title>Recipe | Pan Seared Steak and Steak Meal Prep</title>
         
         
         </head>
