--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="recipes/steakmeal.html"> Pan Seared Steak and Meal Prep </a></li>
                 <li><a href="recipes/chickenwings.html"> Crispy Honey Sriracha Chicken Wings</li>
-                <li><a href="recipes/clam.html">Clams with sherry & Serrano Ham</a></li>
+                <li><a href="recipes/clam.html">Clams with Sherry & Serrano Ham</a></li>
             </ul>
                 
 
