added css colors

--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
         <head>
             <meta charset="UTF-8">
             <title>First Project</title>
+            <link rel="stylesheet" href="style.css">
 
         </head>
 
         <body>
             <h1><strong>Odin Recipes</strong></h1>
+            <p><time style="font-family: Helvetica; color: black; display: block;"><em> Published on June 23, 2022 </em></time></p>
 
-            <img src="images/chef.jpeg" width="700" height="500" alt="Photo of a person cooking">
+            <img src="images/chef.jpeg" alt="Photo of a person cooking" class="chef">
 
             <h2><strong>Quality Food</strong></h2>
 
             <ul>
-                <li><a href="recipes/steakmeal.html"> Pan Seared Steak and Meal Prep </a></li>
+                <li><a style="font-family: Helvetica; color: blue;" href="recipes/steakmeal.html" > Pan Seared Steak and Meal Prep </a></li>
                 <li><a href="recipes/chickenwings.html"> Crispy Honey Sriracha Chicken Wings</li>
                 <li><a href="recipes/clam.html">Clams with Sherry & Serrano Ham</a></li>
             </ul>
