--- a/recipes/steakmeal.html
+++ b/recipes/steakmeal.html
@@ -3,7 +3,11 @@
         <head>
             <meta charset="UTF-8">
             <title>Recipe | Pan Seared Steak and Steak Meal Prep</title>
-        
+            <style>
+                body {
+                    background-color: antiquewhite;
+                }
+            </style>            
         
         </head>
 
