--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
         </head>
 
         <body>
-            <h1><strong>Odin Recipes</strong></h1>
+            <div>
+            <h1>Odin Recipes</h1>
             <p><time style="font-family: Helvetica; color: black; display: block;"><em> Published on June 23, 2022 </em></time></p>
+            </div>
 
             <img src="images/chef.jpeg" alt="Photo of a person cooking" class="chef">
-
-            <h2><strong>Quality Food</strong></h2>
+        
+        <div>
+            <h2>Quality Food</h2>
 
             <ul>
-                <li><a style="font-family: Helvetica; color: blue;" href="recipes/steakmeal.html" > Pan Seared Steak and Meal Prep </a></li>
+                <li><a href="recipes/steakmeal.html" > Pan Seared Steak and Meal Prep </a></li>
                 <li><a href="recipes/chickenwings.html"> Crispy Honey Sriracha Chicken Wings</li>
                 <li><a href="recipes/clam.html">Clams with Sherry & Serrano Ham</a></li>
             </ul>
-                
+         </div>       
 
         </body>
     </html>
