--- a/recipes/clam.html
+++ b/recipes/clam.html
@@ -3,14 +3,19 @@
         <head>
             <meta charset="UTF-8">
             <title> Recipe | Clams with Sherry & Serrano Ham</title>
+            <link rel="stylesheet" href="../style.css">
         </head>
 
         <body>
-            <h1><strong>Clams with Sherry & Serrano Ham</strong></h1>
-            <p>Sweet clams and salty ham are a perfect combination, and this tapas dish or sharing starter can be made in minutes</p>
+            <div>
+                <h1>Clams with Sherry & Serrano Ham</h1>
+                    <p>Sweet clams and salty ham are a perfect combination, and this tapas dish or sharing starter can be made in minutes</p>
+            </div>
 
-            <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/clams-with-sherry-serrano-ham-93de2aa.jpg?quality=90&webp=true&resize=600,545">
-            <h2><strong>Ingredients</strong></h2>
+            <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/clams-with-sherry-serrano-ham-93de2aa.jpg?quality=90&webp=true&resize=600,545" class="chef">
+            
+         <div>   
+            <h2>Ingredients</h2>
             <ul>
                 <li>1 tbsp olive oil</li>
                 <li>½ onion , very finely chopped</li>
@@ -20,14 +25,20 @@
                 <li>100ml fino sherry</li>
                 <li>handful of parsley , roughly chopped</li>
             </ul>
+        </div>
 
-            <h3><strong>Directions</strong></h3>
+        <div>
+            <h3>Directions</h3>
             <ol>
                 <li>In a medium pan with a lid, heat the oil and cook the onion for 5-7 mins to soften. Rinse the clams in a colander and discard any that are opened and will not close with a sharp tap. Add the ham and garlic to the onion and cook for 1 min.</li>
                 <li>Add the clams to the pan with the sherry, bring to the boil, cover and cook for 4-5 mins until the clams have all opened (discard any that haven’t). Serve immediately, sprinkled with parsley.</li>
 
             </ol>
+        </div>
         </body>
 
+        <div>
         <a href="../index.html">Return to main page</a>
+        </div>
+
     </html>
